--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,29 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-
-    "jsx": "react-jsx",
-
-    "strict": false,
-    "skipLibCheck": true,
-    "isolatedModules": true,
-    "noEmit": true,
-
-    "useDefineForClassFields": false,
     "experimentalDecorators": true,
-
+    "useDefineForClassFields": false,
+    "module": "ESNext",
+    "lib": [
+      "ES2022",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "skipLibCheck": true,
+    "types": [
+      "node"
+    ],
+    "moduleResolution": "bundler",
+    "isolatedModules": true,
+    "moduleDetection": "force",
     "allowJs": true,
-    "resolveJsonModule": true,
-
-    "types": ["node"],
-
-    "baseUrl": ".",
+    "jsx": "react-jsx",
     "paths": {
-      "@/*": ["./*"]
-    }
-  },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "dist"]
+      "@/*": [
+        "./*"
+      ]
+    },
+    "allowImportingTsExtensions": true,
+    "noEmit": true
+  }
 }
