no more url for image and added dark mode toggle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,11 @@
     "allowJs": true,
     "jsx": "react-jsx",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+
+  "include": ["**/*.ts", "**/*.tsx"]
 }
